# RKPairip

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
RKPairip/: Anti_Splits.py  Argparse.py  CRC.py  C_M.py  Decompile_Compile.py  Extract.py  Files_Check.py  Fix_Dex.py  Flutter_SO.py  Instruction_Credit.py  Manifest_Patch.py  Objectlogger.smali  Other_Patch.py  RK_Pairip.py  Scan.py  Smali_Patch.py  __init__.py  __main__.py
