[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "Pairip"
version = "4.1"
authors = [
  { name = "RK_TECHNO_INDIA", email = "TechnoIndian786@gmail.com" }
]

description = "Smali Patcher ( Recover String & Rebuild Apk )"

license = { file = "LICENSE" }
readme = "README.md"

requires-python = ">=3.12"
dependencies = ["requests", "multiprocess"]

keywords = ["RKPairip"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Assemblers",
]

[project.scripts]
RKPairip = "RKPairip.RK_Pairip:RK_Techno_IND"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"RKPairip" = ["Objectlogger.smali", "lib_Pairip_CoreX.so"]

[project.urls]
Homepage = "https://github.com/TechnoIndian/RKPairip"
Repository = "https://github.com/TechnoIndian/RKPairip.git"
Issues = "https://github.com/TechnoIndian/RKPairip/issues"

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 79